traefik/traefik_dash_ingressroute.yml
# dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefikdashboard
  namespace: k8traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k8straefik.paulgobero.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    
  tls:
    certResolver: letsencrypt-production
    secretName: traefikdash-prod-cert-com-tls
